router guest guard

--- a/src/core/i18n/langs/ru.json
+++ b/src/core/i18n/langs/ru.json
@@ -19,5 +19,7 @@
   "create": "Создать новую",
   "my_posts": "Мои статьи",
   "country": "Страна",
-  "city": "Город"
+  "city": "Город",
+  "created": "Создано",
+  "edited": "Последнее изменение"
 }
