--- a/src/core/i18n/langs/ru.json
+++ b/src/core/i18n/langs/ru.json
@@ -21,5 +21,7 @@
   "country": "Страна",
   "city": "Город",
   "created": "Создано",
-  "edited": "Последнее изменение"
+  "edited": "Последнее изменение",
+  "edit_tooltip": "Редактировать",
+  "delete_tooltip": "Удалить"
 }
